<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:attrs="http://schemas.android.com/apk/res-auto"
    app:ignore="NamespaceTypo">

    <data>

    </data>


    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/white_rounded_button"
            android:elevation="@dimen/_6sdp"
            android:padding="@dimen/_13sdp">

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:background="@drawable/white_rounded_button"
                android:contentDescription="@string/back"
                android:padding="@dimen/_1sdp"
                android:src="@drawable/ic_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="@dimen/_15sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21sdp"
                android:gravity="center_horizontal"
                android:text="@string/cart"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgEmptyCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="66dp"
            android:contentDescription="@string/empty_cart"
            android:gravity="center"
            android:src="@drawable/empty_cart"
            android:text="@string/cart_is_empty"
            android:textSize="@dimen/_13sdp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/cart_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:scrollbars="none"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingTop="@dimen/_14sdp"
                    android:paddingBottom="@dimen/_15sdp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/items"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTotalCartCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="01"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#1A000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCartList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:paddingVertical="@dimen/_15sdp"
                        app:itemCount="2"
                        attrs:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                    <LinearLayout
                        android:id="@+id/cartDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_rounded_background_top_only"
                        android:elevation="@dimen/_1sdp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:paddingVertical="@dimen/_4sdp"
                        android:visibility="visible">

                        <LinearLayout
                            android:id="@+id/payableContainer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total"
                                android:textColor="#8D1F024E" />

                            <TextView
                                android:id="@+id/totalAmount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textSize="@dimen/_21sdp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/appCompatButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/_2sdp"
                            android:background="@drawable/rounded_button"
                            android:minHeight="@dimen/_20sdp"
                            android:paddingHorizontal="@dimen/_35sdp"
                            android:paddingVertical="@dimen/_9sdp"
                            android:text="@string/checkout"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</layout>