<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBackground"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/CollapsingToolbarLayoutCollapseTextStyle"
                app:contentScrim="@color/white"
                app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:scrimVisibleHeightTrigger="@dimen/_180sdp"
                app:statusBarScrim="@color/white"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/collapsingImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_280sdp"
                    android:background="@color/white"
                    android:src="@drawable/header_image"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:titleTextColor="@color/white">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivBack"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_back" />

                        <TextView
                            android:id="@+id/tvtool_bar_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/ivBack"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_back"
            app:backgroundTint="@color/white"
            app:fabSize="normal"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="top|right|start"
            app:maxImageSize="15dp"
            android:contentDescription="@string/back" />


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:foregroundGravity="center"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="top|right">

            <TextView
                android:id="@+id/cartItemCount"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@drawable/badge_background"
                android:elevation="8dp"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_2sdp"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp" />

            <LinearLayout
                android:id="@+id/favCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/white_rounded_button"
                android:elevation="6dp"
                android:padding="@dimen/_12sdp">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_shopping_bag"
                    app:tint="#693CEA"
                    android:contentDescription="@string/cart" />
            </LinearLayout>
        </FrameLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingBottom="@dimen/_50sdp"
            app:behavior_overlapTop="@dimen/_10sdp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.restaurantdetail_activity_new.DiningRestaurantDetailFragment">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/over_rounded_white_background"
                        android:elevation="@dimen/_10sdp"
                        android:orientation="vertical"
                        android:outlineAmbientShadowColor="#9888F533">

                        <TextView
                            android:id="@+id/tvProductName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_22sdp"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <LinearLayout
                            android:id="@+id/tvPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:gravity="center_vertical"
                            android:paddingHorizontal="@dimen/_10sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvRetaurantName"
                            app:layout_constraintVertical_bias="0.0">

                            <TextView
                                android:id="@+id/tvProductPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:textColor="@color/black"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/actionContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:gravity="center_vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/offer_container">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/_10sdp"
                                android:layout_marginVertical="@dimen/_4sdp"
                                android:background="@drawable/rounded_button">

                                <LinearLayout
                                    android:id="@+id/actionWithCount"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal"
                                    android:visibility="gone">

                                    <TextView
                                        android:id="@+id/btnMinus"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:paddingHorizontal="@dimen/_12sdp"
                                        android:paddingVertical="@dimen/_4sdp"
                                        android:text="-"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/_14sdp" />

                                    <TextView
                                        android:id="@+id/tvItemCount"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:paddingHorizontal="@dimen/_12sdp"
                                        android:text="1"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/_14sdp" />

                                    <TextView
                                        android:id="@+id/btnPlus"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:paddingHorizontal="@dimen/_12sdp"
                                        android:paddingVertical="@dimen/_4sdp"
                                        android:text="+"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/_14sdp" />

                                </LinearLayout>

                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/btnAdd"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/rounded_button"
                                    android:minHeight="@dimen/_34sdp"
                                    android:paddingHorizontal="@dimen/_24sdp"
                                    android:paddingVertical="@dimen/_8sdp"
                                    android:text="@string/add_to_cart"
                                    android:textAllCaps="false"
                                    android:textColor="#1F024E"
                                    android:textSize="@dimen/_11sdp"
                                    android:textStyle="normal" />
                            </LinearLayout>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey_300" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:text="@string/details"
                            android:textColor="#000330"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/tvDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:lineHeight="@dimen/_20sdp"
                            android:textColor="#868686"
                            android:textFontWeight="400"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintEnd_toEndOf="@+id/tvRetaurantName"
                            app:layout_constraintStart_toStartOf="@+id/tvRetaurantName"
                            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
                            tools:targetApi="p" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
